added squares
